[gd_scene load_steps=15 format=3 uid="uid://celv8gbqce6mj"]

[ext_resource type="PackedScene" uid="uid://ylvm0hspe11h" path="res://scenes/enemy_base.tscn" id="1_4i6aw"]
[ext_resource type="Script" path="res://scripts/enemy_kamikaze.gd" id="2_4giyb"]
[ext_resource type="Texture2D" uid="uid://3bmuqpyf71nj" path="res://assets/icon.svg" id="3_4sgi2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jbgi"]
size = Vector2(26, 26)

[sub_resource type="Animation" id="Animation_egv3c"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_7kaxk"]
resource_name = "chase"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="Animation" id="Animation_8y4s3"]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.180392)]
}

[sub_resource type="Animation" id="Animation_bi60y"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(0.2, 0.25), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_juewu"]
resource_name = "spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h0u08"]
resource_name = "wander"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_os52i"]
_data = {
"RESET": SubResource("Animation_egv3c"),
"chase": SubResource("Animation_7kaxk"),
"explode": SubResource("Animation_8y4s3"),
"idle": SubResource("Animation_bi60y"),
"spawn": SubResource("Animation_juewu"),
"wander": SubResource("Animation_h0u08")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_r68pj"]
radius = 198.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cwc0o"]
radius = 234.137

[sub_resource type="CircleShape2D" id="CircleShape2D_8gcu0"]
radius = 94.0479

[node name="EnemyKamikaze" instance=ExtResource("1_4i6aw")]
script = ExtResource("2_4giyb")
start_state = 0
health = 0
speed = 180.0
base_damage = 5

[node name="NavigationAgent2D" parent="." index="0"]
radius = 30.0
neighbor_distance = 70.0

[node name="Sprite2D" type="Sprite2D" parent="." index="1"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_4sgi2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource("RectangleShape2D_3jbgi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_os52i")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerEnter" index="0"]
shape = SubResource("CircleShape2D_r68pj")
debug_color = Color(0, 0.647059, 0.223529, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerExit" index="0"]
shape = SubResource("CircleShape2D_cwc0o")

[node name="ExplosionRadius" type="CollisionShape2D" parent="." index="6"]
shape = SubResource("CircleShape2D_8gcu0")
disabled = true
debug_color = Color(0.984314, 0, 0.337255, 0.419608)

[node name="IdleTimer" type="Timer" parent="." index="7"]

[node name="WanderTimer" type="Timer" parent="." index="8"]
